[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day_1"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.28", features = ["executor", "thread-pool"] }
num = { version = "0.4.1", features = ["num-bigint"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["rt"] }

[dev-dependencies]
criterion = {version = "0.5.1"}

[[bench]]
name = "day_8"
harness = false
